--- a/tarefa_anotation/pom.xml
+++ b/tarefa_anotation/pom.xml
@@ -5,8 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.gpaiva</groupId>
-    <artifactId>Colecoes-parte-2</artifactId>
+    <artifactId>tarefa_anotation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
